// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management design index page renders design index 1`] = `
<div
  class="design-detail js-design-detail fixed-top w-100 position-bottom-0 d-flex justify-content-center flex-column flex-lg-row"
>
  <div
    class="d-flex overflow-hidden flex-grow-1 flex-column position-relative"
  >
    <design-destroyer-stub
      filenames="test.jpg"
      iid="1"
      projectpath=""
    />
     
    <!---->
     
    <design-presentation-stub
      discussions="[object Object]"
      image="test.jpg"
      imagename="test.jpg"
      scale="1"
    />
     
    <div
      class="design-scaler-wrapper position-absolute mb-4 d-flex-center"
    >
      <design-scaler-stub />
    </div>
  </div>
   
  <div
    class="image-notes"
  >
    <h2
      class="gl-font-size-20-deprecated-no-really-do-not-use-me font-weight-bold mt-0"
    >
      
        My precious issue
      
    </h2>
     
    <a
      class="text-tertiary text-decoration-none mb-3 d-block"
      href="full-issue-url"
    >
      ull-issue-path
    </a>
     
    <participants-stub
      class="mb-4"
      numberoflessparticipants="7"
      participants="[object Object]"
    />
     
    <design-discussion-stub
      designid="1"
      discussion="[object Object]"
      discussionindex="1"
      markdownpreviewpath="//preview_markdown?target_type=Issue"
      noteableid="design-id"
    />
     
    <!---->
  </div>
</div>
`;

exports[`Design management design index page sets loading state 1`] = `
<div
  class="design-detail js-design-detail fixed-top w-100 position-bottom-0 d-flex justify-content-center flex-column flex-lg-row"
>
  <gl-loading-icon-stub
    class="align-self-center"
    color="orange"
    label="Loading"
    size="xl"
  />
</div>
`;

exports[`Design management design index page with error GlAlert is rendered in correct position with correct content 1`] = `
<div
  class="design-detail js-design-detail fixed-top w-100 position-bottom-0 d-flex justify-content-center flex-column flex-lg-row"
>
  <div
    class="d-flex overflow-hidden flex-grow-1 flex-column position-relative"
  >
    <design-destroyer-stub
      filenames="test.jpg"
      iid="1"
      projectpath=""
    />
     
    <div
      class="p-3"
    >
      <gl-alert-stub
        dismissible="true"
        dismisslabel="Dismiss"
        primarybuttonlink=""
        primarybuttontext=""
        secondarybuttonlink=""
        secondarybuttontext=""
        title=""
        variant="danger"
      >
        
          woops
        
      </gl-alert-stub>
    </div>
     
    <design-presentation-stub
      discussions=""
      image="test.jpg"
      imagename="test.jpg"
      scale="1"
    />
     
    <div
      class="design-scaler-wrapper position-absolute mb-4 d-flex-center"
    >
      <design-scaler-stub />
    </div>
  </div>
   
  <div
    class="image-notes"
  >
    <h2
      class="gl-font-size-20-deprecated-no-really-do-not-use-me font-weight-bold mt-0"
    >
      
        My precious issue
      
    </h2>
     
    <a
      class="text-tertiary text-decoration-none mb-3 d-block"
      href="full-issue-url"
    >
      ull-issue-path
    </a>
     
    <participants-stub
      class="mb-4"
      numberoflessparticipants="7"
      participants="[object Object]"
    />
     
    <h2
      class="new-discussion-disclaimer gl-font-base m-0"
    >
      
        Click the image where you'd like to start a new discussion
      
    </h2>
  </div>
</div>
`;
